# cynthion

./: .gitignore  .readthedocs.yaml  BUILD.md  CHANGELOG.md  Dockerfile  Jenkinsfile  README.md
.github/workflows/: python.yml
ci/: build.sh  interactive-test.py  test.sh
cynthion/python/: Makefile  README.md  constrains.txt  pyproject.toml
cynthion/python/assets/: 54-cynthion.rules
cynthion/python/examples/: facedancer-rubber-ducky.py  facedancer-usbproxy.py  facedancer-user-io.py
cynthion/python/examples/tutorials/: gateware-blinky.py  gateware-usb-device-01.py  gateware-usb-device-02.py  gateware-usb-device-03.py  gateware-usb-device-04.py  test-gateware-usb-device-01.py  test-gateware-usb-device-03.py  test-gateware-usb-device-04.py
cynthion/python/src/: __init__.py  board.py  cynthion.py  shared.py
cynthion/python/src/boards/: cynthion_moondancer.py
cynthion/python/src/commands/: __init__.py  cli.py  cynthion_build.py  cynthion_flash.py  cynthion_info.py  cynthion_mcu_firmware.py  cynthion_program.py  cynthion_run.py  cynthion_selftest.py  cynthion_setup.py  cynthion_update.py  util.py
cynthion/python/src/gateware/: __init__.py
cynthion/python/src/gateware/analyzer/: README.md  analyzer.py  event_detection.py  events.py  fifo.py  speed_detection.py  speeds.py  top.py
cynthion/python/src/gateware/facedancer/: README.md  advertiser.py  info.py  top.py
cynthion/python/src/gateware/platform/: __init__.py  adv.py  core.py  cynthion_r0_1.py  cynthion_r0_2.py  cynthion_r0_3.py  cynthion_r0_4.py  cynthion_r0_5.py  cynthion_r0_6.py  cynthion_r0_7.py  cynthion_r1_0.py  cynthion_r1_1.py  cynthion_r1_2.py  cynthion_r1_3.py  cynthion_r1_4.py
cynthion/python/src/gateware/selftest/: top.py
cynthion/python/src/gateware/soc/: README.md  advertiser.py  top.py
cynthion/python/src/interfaces/: gpio.py  led.py
cynthion/python/src/selftest/: __init__.py  gateware.py  host.py  registers.py
cynthion/python/tests/: test_shared.py
cynthion/rust/: Cargo.toml  README.md
cynthion/rust/src/: lib.rs  shared.rs
device/firmware/: Cargo.toml  memory.x
device/gateware/: pyproject.toml
device/gateware/analyzer/: analyzer.py  top.py
device/gateware/moondancer_soc/: Makefile  README.md  top.py
docs/: .readthedocs.yaml  requirements.txt
docs/source/: cli.rst  conf.py  cynthion_bringup_guide.rst  cynthion_getting_started.rst  cynthion_hardware.rst  cynthion_safety_information.rst  facedancer.rst  facedancer_getting_started.rst  getting_help.rst  getting_started.rst  getting_started_facedancer.rst  getting_started_facedancer_user_io.rst  getting_started_packetry.rst  getting_started_usbproxy.rst  index.rst  introduction.rst  packetry.rst  packetry_getting_started.rst  project_description.rst  safety_information.rst  tutorial_emulation.rst  tutorial_usb_analysis.rst  usbproxy.rst  usbproxy_getting_started.rst
firmware/: Cargo.toml  Makefile  memory.x
firmware/facedancer-pac/: Cargo.toml  Makefile  README.md  build.rs  device.x
firmware/facedancer-pac/src/: cpu.rs  generated.rs  macros.rs
firmware/facedancer-pac/svd/: facedancer.svd  lunasoc.svd
firmware/ladybug/: CHANGELOG.md  Cargo.toml  README.md
firmware/ladybug/src/: lib.rs
firmware/libgreat/: CHANGELOG.md  Cargo.toml  README.md
firmware/libgreat-rs/: Cargo.toml  README.md
firmware/libgreat-rs/src/: error.rs  gcp.rs
firmware/libgreat-rs/src/gcp/: class.rs  class_core.rs
firmware/libgreat/src/: error.rs  firmware.rs  gcp.rs  lib.rs
firmware/libgreat/src/gcp/: class.rs  class_core.rs
firmware/lunasoc-hal/: CHANGELOG.md  Cargo.toml  LICENSE.txt
firmware/lunasoc-hal/.cargo/: config.toml  cynthion.sh  flash.sh
firmware/lunasoc-hal/examples/: blinky.rs  blinky_pac.rs  interrupts.rs  interrupts_pac.rs  uart.rs  uart_pac.rs
firmware/lunasoc-hal/src/: gpio.rs  lib.rs  serial.rs  timer.rs  usb.rs
firmware/lunasoc-hal/src/usb/: error.rs
firmware/lunasoc-pac/: Cargo.toml  Makefile  README.md  build.rs
firmware/lunasoc-pac/.cargo/: config.toml
firmware/lunasoc-pac/src/: cpu.rs  csr.rs  generated.rs  lib.rs
firmware/lunasoc-pac/svd/: lunasoc.svd
firmware/moondancer/: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  build.rs  memory.x
firmware/moondancer-pac/: CHANGELOG.md  Cargo.toml  Makefile  README.md
firmware/moondancer-pac/src/: csr.rs  generated.rs  lib.rs
firmware/moondancer-pac/svd/: lunasoc.svd  moondancer.svd
firmware/moondancer/.cargo/: apollo.sh  config.toml  cynthion.sh  flash.sh  openocd-jtag+serial.cfg  openocd.gdb
firmware/moondancer/examples/: acm_serial.rs  bulk_speed_test.rs  cdc_serial_loopback.rs  gpio.rs  hello.rs  interrupts.rs  interrupts_pac.rs  irq.rs  smollest.rs  spiflash.rs  usb_hal.rs
firmware/moondancer/scripts/: bulk_speed_test.py  facedancer-umass.py  facedancer-usbproxy-midicontrol.py  mass_storage.py  moondancer-info.py  tests-moondancer.py  tests.py  usb_hal.py
firmware/moondancer/src/: debug.rs  error.rs  event.rs  gcp.rs  hal.rs  lib.rs  log.rs  log_crit.rs  macros.rs  panic_log.rs  usb.rs  util.rs
firmware/moondancer/src/gcp/: firmware.rs  gpio.rs  leds.rs  moondancer.rs  selftest.rs
firmware/moondancer/test/: test_firmware.py  test_gpio.py  test_libgreat.py  test_moondancer.py  test_raw.py
firmware/smolusb/: CHANGELOG.md  Cargo.toml  README.md
firmware/smolusb/src/: class.rs  control.rs  control_deprecated.rs  control_new.rs  descriptor.rs  device.rs  error.rs  event.rs  lib.rs  setup.rs  traits.rs
firmware/smolusb/src/class/: acm.rs  cdc.rs
firmware/smolusb/src/descriptor/: microsoft10.rs
host/: README.md  pyproject.toml
host/cynthion/: __init__.py  board.py  cynthion.py  errors.py  interface.py
host/cynthion/boards/: __init__.py  cynthion_moondancer.py
host/cynthion/commands/: cli.py  cynthion_analyzer.py  cynthion_info.py
host/cynthion/gateware/platform/: __init__.py  cynthion_r0_1.py  cynthion_r0_2.py  cynthion_r0_4.py  cynthion_r0_6.py  cynthion_r1_0.py  cynthion_r1_1.py  cynthion_r1_2.py
host/util/: 54-cynthion.rules
shared/: libgreat.toml  registers.toml  usb.toml
util/: 54-cynthion.rules
(+46 files in other folders)
