[workspace]
members = [
    "libgreat",
    "lunasoc-hal",
    "lunasoc-pac",
    "moondancer",
    "smolusb",
]

exclude = [
]

# - profiles ------------------------------------------------------------------

[profile.release]
codegen-units = 1
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = "s"
overflow-checks = false
