[workspace]
members = [
    "ladybug",
    "libgreat-rs",
    "lunasoc-hal",
    "lunasoc-pac",
    "moondancer",
    "smolusb",
]
resolver = "2"

exclude = [
]

# - profiles ------------------------------------------------------------------

[profile.release]
codegen-units = 1
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = "s"
overflow-checks = false

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = false
incremental = false
lto = true
opt-level = "s"
overflow-checks = false
