[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "cynthion"
dynamic = ["version"]
requires-python = ">=3.8"
authors = [
    {name = "Great Scott Gadgets", email = "dev@greatscottgadgets.com"},
]
license = { text = "BSD" }
description = "Python library for the Great Scott Gadgets Cynthion USB Test Instrument"
urls = { Source = "https://greatscottgadgets.com/cynthion" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Environment :: Console",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
]
dependencies = [
    "future",
    "libusb1",
    "prompt_toolkit",
    "pyfwup>=0.2",
    "pyserial>=3.5",
    "pyusb",
    "tabulate",
    "tomli",
    "tqdm",
    "pygreat @ git+https://github.com/antoinevg/libgreat.git@antoinevg/moondancer#subdirectory=host",
    "apollo_fpga @ git+https://github.com/greatscottgadgets/apollo.git",  # temporarily pull from git until apollo release
]

[project.optional-dependencies]
gateware = [
    "amaranth==0.4.1",
    "amaranth-stdio @ git+https://github.com/amaranth-lang/amaranth-stdio@4a14bb17",
    "luna @ git+https://github.com/greatscottgadgets/luna@main",
]
gateware-soc = [
    "luna-soc @ git+https://github.com/greatscottgadgets/luna-soc@main",
]

[project.scripts]
cynthion = "cynthion.commands.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
cynthion = "src"

[tool.setuptools-git-versioning]
enabled = true
starting_version = "1.0.0"

[tool.setuptools.package-data]
"cynthion.shared" = ["*.toml"]
