[build-system]
requires = ["setuptools>=64.0", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "cynthion"
description = "Python package and utilities for the Great Scott Gadgets Cynthion USB Test Instrument"
license = { text = "BSD" }
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Great Scott Gadgets", email = "dev@greatscottgadgets.com"},
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Security",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB)",
]

dynamic = ["version"]

dependencies = [
    "importlib_resources; python_version<'3.9'",
    "future",
    "libusb1",
    "prompt_toolkit",
    "pyfwup>=0.2",
    "pyserial>=3.5",
    "pyusb",
    "tabulate",
    "tomli",
    "tqdm",
    "pygreat~=2024.0",
    "apollo_fpga @ git+https://github.com/greatscottgadgets/apollo.git",  # temporarily pull from git until apollo release
    #"apollo~=???",
]

[project.optional-dependencies]
gateware = [
    "amaranth==0.4.1",
    "luna-usb @ git+https://github.com/greatscottgadgets/luna@main",
    #"luna-usb~=0.1"
    "luna-soc @ git+https://github.com/greatscottgadgets/luna-soc@main",
    #"luna-soc~=0.1"
]

[project.scripts]
cynthion = "cynthion.commands.cli:main"

[project.urls]
Documentation = "https://luna-soc.readthedocs.io"
Repository    = "https://github.com/greatscottgadgets/luna-soc"
Issues        = "https://github.com/greatscottgadgets/luna-soc/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
cynthion = "src"

[tool.setuptools.package-data]
"cynthion.shared" = ["*.toml"]

[tool.setuptools-git-versioning]
enabled = true
starting_version = "0.0.0"
