[build-system]
requires = ["setuptools>=64.0", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "cynthion"
description = "Python package and utilities for the Great Scott Gadgets Cynthion USB Test Instrument"
license = { text = "BSD" }
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Great Scott Gadgets", email = "dev@greatscottgadgets.com"},
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Security",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB)",
]

dynamic = ["version"]

dependencies = [
    "importlib_resources; python_version<'3.9'",
    "future",
    "libusb1",
    "prompt_toolkit",
    "pyfwup~=0.5",
    "pyserial>=3.5",
    "pyusb",
    "tabulate",
    "tomli",
    "tqdm",
    "pygreat~=2024.0.5",
    "apollo_fpga~=1.1",
    "amaranth~=0.5",
    "luna-usb~=0.2",
    "luna-soc~=0.3.2",
]

[project.scripts]
cynthion = "cynthion.commands.cli:main"

[project.urls]
Documentation = "https://cynthion.readthedocs.io"
Repository    = "https://github.com/greatscottgadgets/cynthion"
Issues        = "https://github.com/greatscottgadgets/cynthion/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"cynthion"        = "src"
"cynthion.assets" = "assets"

[tool.setuptools.package-data]
"cynthion.shared" = ["*.toml"]
"cynthion.assets" = ["*.rules", "*.bin", "**/*.bit"]

[tool.setuptools-git-versioning]
enabled = true
starting_version = "0.0.0"
