[package]
name = "cynthion"
version = "0.0.1"
authors = ["Great Scott Gadgets <dev@greatscottgadgets.com>"]
license-file = "LICENSE.txt"
categories = ["embedded", "hardware-support"]
description = "Rust library for the Great Scott Gadgets Cynthion USB Test Instrument."
edition = "2021"
rust-version = "1.68"

[dependencies]
static-toml = { version = "1.0.1" }