[package]
name = "cynthion"
version = "0.1.1"
authors = ["Great Scott Gadgets <dev@greatscottgadgets.com>"]
license = "BSD-3-Clause"
description = "Rust library for the Great Scott Gadgets Cynthion USB Test Instrument."
categories = ["embedded", "hardware-support"]
keywords = ["cynthion", "luna", "usb"]
homepage = "https://greatscottgadgets.com/cynthion/"
repository = "https://github.com/greatscottgadgets/cynthion"
documentation = "https://cynthion.readthedocs.io"
edition = "2021"
rust-version = "1.68"

[dependencies]
static-toml = { version = "1.0.1" }