[package]
name = "ladybug"
version = "0.0.1"
authors = ["Great Scott Gadgets <dev@greatscottgadgets.com>"]
license = "BSD-3-Clause"
description = "A small library for triggering a logic analyzer from program events"
categories = [ "embedded", "no-std", "development-tools::debugging" ]
keywords = ["debugger"]
repository = "https://github.com/greatscottgadgets/cynthion"
documentation = "https://docs.rs/ladybug"
edition = "2021"
rust-version = "1.68"

[lib]
test = false
bench = false

[features]
disable = []
enable = []

[dependencies]
