[package]
name = "libgreat"
version = "0.0.0"
authors = ["Great Scott Gadgets <dev@greatscottgadgets.com>"]
license = "BSD-3-Clause"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["cynthion"]
repository = "https://github.com/greatscottgadgets/cynthion"
documentation = "https://docs.rs/libgreat"
description = "Pure rust implementation of Great Scott Gadgets' libgreat communications protocol."
edition = "2021"
rust-version = "1.68"

[features]
default = []
nightly = []

# selects a minimal subset of error codes in order to reduce binary size
errno_minimal = []

[dependencies]
log = "=0.4.17"
zerocopy = { version = "0.7.34", default-features = false, features = ["derive", "byteorder"] }
