[package]
name = "moondancer"
version = "0.1.0"
authors = ["Great Scott Gadgets <dev@greatscottgadgets.com>"]
license-file = "LICENSE.txt"
categories = ["embedded", "hardware-support", "no-std"]
description = "Moondancer firmware for the Great Scott Gadgets Cynthion USB Test Instrument"
edition = "2021"
rust-version = "1.68"
default-run = "moondancer"

autobins = false
autoexamples = false
autotests = false
autobenches = false

[package.metadata.docs.rs]
default-target = "riscv32imac-unknown-none-elf"
targets = [
    "riscv32i-unknown-none-elf",
    "riscv32imac-unknown-none-elf",
]

# - features ------------------------------------------------------------------

[features]
default = [
    #"minerva",
    "vexriscv",
    "vexriscv_dcache",

    #"nightly",

    "chonky_events",
    "ladybug",
]

# pack setup packet and rx packet buffers into event queue
chonky_events = ["smolusb/chonky_events"]
ladybug = ["ladybug/enable"]

# select softcore
minerva = [
    "lunasoc-pac/minerva",
]
vexriscv = [
    "lunasoc-pac/vexriscv",
]
vexriscv_dcache = []

# select nightly toolchain
nightly = [
    "libgreat/nightly",
    "lunasoc-hal/nightly",
]


# - dependencies --------------------------------------------------------------

[dependencies]
cynthion = { path = "../../cynthion/rust" }
ladybug = { path = "../ladybug" }
libgreat = { path = "../libgreat-rs", features = ["errno_minimal"] }
lunasoc-pac = { path = "../lunasoc-pac", default-features = false, features = ["critical-section"]}
lunasoc-hal = { path = "../lunasoc-hal", default-features = false, features = ["usb"]}
smolusb = { path = "../smolusb", default-features = false, features = ["ladybug"]}

riscv = { version = "=0.10.1", features = ["critical-section-single-hart"] }
riscv-rt = { version = "=0.11.0" }

bbqueue = { version = "0.5.1", default-features = false }

heapless = { version = "=0.7.16", default-features = false, features = ["cas", "mpmc_large"] }
#heapless = { path = "../../../forks/heapless.git", default-features = false, features = ["cas", "mpmc_large"] }
zerocopy = { version = "=0.7.0-alpha.2", default-features = false }

log = { version="=0.4.17", features = ["release_max_level_info"] }

# - binaries ------------------------------------------------------------------

[[bin]]
name = "bulk_speed_test"

[[bin]]
name = "cdc_serial_loopback"

[[bin]]
name = "gpio"

[[bin]]
name = "hello"

[[bin]]
name = "interrupts"

[[bin]]
name = "moondancer"

[[bin]]
name = "usb_hal"
