[package]
name = "moondancer"
version = "0.1.7"
authors = ["Great Scott Gadgets <dev@greatscottgadgets.com>"]
license = "BSD-3-Clause"
description = "Moondancer firmware for the Great Scott Gadgets Cynthion USB Test Instrument"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["cynthion", "luna", "riscv"]
homepage = "https://greatscottgadgets.com/cynthion/"
repository = "https://github.com/greatscottgadgets/cynthion"
documentation = "https://cynthion.readthedocs.io"
edition = "2021"
rust-version = "1.68"

autobins = false
autoexamples = false
autotests = false
autobenches = false

default-run = "moondancer"

[package.metadata.docs.rs]
default-target = "riscv32imac-unknown-none-elf"
targets = [
    "riscv32imac-unknown-none-elf",
]

# - features ------------------------------------------------------------------

[features]
default = [
    "vexriscv",
    "vexriscv_dcache",
]

# support for using a logic analyzer and the gpio ports for debugging
ladybug = ["ladybug/enable"]

# select softcore
minerva = [
    "moondancer-pac/minerva",
]
vexriscv = [
    "moondancer-pac/vexriscv",
]
vexriscv_dcache = []

# select nightly toolchain
nightly = [
    "libgreat/nightly",
    "lunasoc-hal/nightly",
]

alloc = []


# - dependencies --------------------------------------------------------------

[dependencies]
cynthion = { version = "0.1.1", path = "../../cynthion/rust" }
ladybug = { version = "0.1.6", path = "../ladybug" }
libgreat = { version = "0.1.1", path = "../libgreat", features = ["errno_minimal"] }
lunasoc-hal = { version = "0.1.7", path = "../lunasoc-hal", default-features = false, features = ["usb"]}
moondancer-pac = { version = "0.1.1", path = "../moondancer-pac", default-features = false, features = ["critical-section"]}

riscv = { version = "=0.10.1", features = ["critical-section-single-hart"] }
riscv-rt = { version = "=0.11.0" }

heapless = { version = "0.8.0", default-features = false, features = ["mpmc_large"] }
zerocopy = { version = "0.7.34", default-features = false, features = ["derive", "byteorder"] }

log = { version="=0.4.17", features = ["release_max_level_info"] }

# - binaries ------------------------------------------------------------------

[[bin]]
name = "moondancer"

# - examples ------------------------------------------------------------------

[[example]]
name = "acm_serial"

[[example]]
name = "bulk_speed_test"

[[example]]
name = "gpio"

[[example]]
name = "hello"

[[example]]
name = "interrupts"

[[example]]
name = "spiflash"

[[example]]
name = "usb_hal"
