[package]
name = "smolusb"
version = "0.1.0"
authors = ["Great Scott Gadgets <dev@greatscottgadgets.com>"]
license-file = "LICENSE.txt"
description = "A lightweight library for implementing USB on embedded systems."
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["cynthion", "luna", "usb"]
repository = "https://github.com/greatscottgadgets/cynthion"
documentation = "https://docs.rs/smolusb"
edition = "2021"
rust-version = "1.68"
include = ["examples/**/*", "src/**/*", "README.md", "memory.x"]

[features]
default = []
chonky_events = []

[dependencies]
heapless = { version = "=0.7.16" } # TODO 0.8.0 is en-route...
log = "=0.4.17"
zerocopy = { version = "=0.7.0-alpha.2", default-features = false }