[package]
name = "smolusb"
version = "0.1.4"
authors = ["Great Scott Gadgets <dev@greatscottgadgets.com>"]
license = "BSD-3-Clause"
description = "An experimental lightweight library for implementing USB on embedded systems."
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["cynthion", "luna", "soc", "usb"]
repository = "https://github.com/greatscottgadgets/cynthion"
documentation = "https://docs.rs/smolusb"
edition = "2021"
rust-version = "1.68"

[features]
default = []

# experimental: pack received data into interrupt events
chonky_events = []

# use nightly features
nightly = []

[dependencies]
log = "=0.4.17"
zerocopy = { version = "0.7.34", default-features = false, features = ["derive"] }